Fix tools overflowing on projects

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -5,3 +5,8 @@
   display: inline-block;
   margin-right: 74%;
 }
+
+.small-scroll {
+  height: 90px;
+  overflow-y: auto;
+}
